+new docs in library list ~for document added true reference to theme through entity Theme, not only theme_id ~forms now handle entity Theme in doc editing +flowplayer for video ~jquery upload file had link to external script (jquery.form.js)

--- a/Symfony/src/Big/ElibreBundle/Resources/translations/messages.en.xlf
+++ b/Symfony/src/Big/ElibreBundle/Resources/translations/messages.en.xlf
@@ -47,6 +47,10 @@
                 <source>register.account_deactivated</source>
                 <target>Your account was deactivated</target>
             </trans-unit>
+            <trans-unit id="11">
+                <source>theme.goto</source>
+                <target>Go to theme</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
